backdrop z-index fix

--- a/src/components/Backdrop/Backdrop.module.scss
+++ b/src/components/Backdrop/Backdrop.module.scss
@@ -7,5 +7,4 @@
   left: 0;
   top: 0;
   background-color: $backdrop-color;
-  z-index: 1;
 }
