--- a/src/components/ConfirmationModal/ConfirmationModal.module.scss
+++ b/src/components/ConfirmationModal/ConfirmationModal.module.scss
@@ -12,7 +12,7 @@
   left: 50%;
   transform: translate(-50%, -50%);
   border-radius: $component-border-radius;
-  z-index: 2;
+  z-index: 3;
 }
 
 .ConfirmationModal_text {
