--- a/src/components/Spinner/Spinner.module.scss
+++ b/src/components/Spinner/Spinner.module.scss
@@ -8,7 +8,7 @@
   transform: translate(-50%, -50%);
   width: 80px;
   height: 80px;
-  z-index: 3;
+  z-index: 4;
 }
 .Spinner div {
   box-sizing: border-box;
